--- a/package.json
+++ b/package.json
@@ -4,12 +4,8 @@
   "description": "Angular project(Epam)",
   "main": "app.js",
   "type": "module",
-  "engines": {
-    "node": "14.x"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon "
+    "dev": "node app.js"
   },
   "keywords": [
     "Angular"
